fixed deprecated APIs